--- a/examples/html/index.html
+++ b/examples/html/index.html
@@ -15,7 +15,7 @@
   <div id="content"></div>
   <script src="script.js"></script>
   <script>
-    window.addEventListener("load", loadContent);
+    window.addEventListener("load", closure(loadContent, "http://127.0.0.1:5000"));
   </script>
 </body>
 </html>
